hphp/test/zend/good/Zend/tests/traits/bugs/overridding-conflicting-property-initializer.php.expectf

Fatal error: trait declaration of property 'zoo' is incompatible with previous declaration in %s/overridding-conflicting-property-initializer.php on line 8
